# Master-DM-tool

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md
src/world_studio/: __init__.py  bootstrap.py  config.py  main.py
src/world_studio/application/: services.py  simulation.py
src/world_studio/data/: database.py  migrations.py  repositories.py
src/world_studio/domain/: __init__.py  enums.py  events.py  population.py  simulation.py  world.py
src/world_studio/events/: __init__.py  chained_effect_engine.py  event_dsl_models.py  event_effect_resolver.py
src/world_studio/generation/: __init__.py  continent_generator.py  demographics_generator.py  event_aware_generation.py  generation_context.py  generation_models.py  generation_modifiers.py  generation_rules.py  generation_service.py  history_context_builder.py  narrative_seed_builder.py  node_layout_generator.py  npc_generator.py  occupation_allocator.py  political_generator.py  region_generator.py  relationship_seed_generator.py  route_generator.py  settlement_flavor_builder.py  settlement_generator.py  settlement_promotion_rules.py  spatial_generator.py  world_generator.py
src/world_studio/infrastructure/: __init__.py  json_io.py  map_graph.py  pdf_export.py
tests/: test_event_aware_generation.py  test_generation_pipeline.py  test_hierarchy_repositories.py  test_hierarchy_services.py  test_import_export_service.py  test_json_round_trip.py  test_migrations.py  test_phase6_map_integration.py  test_snapshot_pdf_phase8.py  test_social_repositories.py  test_social_services.py
(+7 files in other folders)
