[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "world-studio"
version = "0.1.0"
description = "Offline-first desktop world simulation studio for TTRPG campaigns."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.9.0",
  "pydantic>=2.11.0",
  "reportlab>=4.4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.12.0"
]

[project.scripts]
world-studio = "world_studio.main:main"
world-studio-migrate = "world_studio.data.migrations:run_cli_migrations"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
